# prime_kinova_control

./: CMakeLists.txt  README.md  package.xml
nodes/: prime_kinova_control.py
