<?xml version="1.0"?>
<package format="2">
  <name>prime_kinova_control</name>
  <version>0.1.0</version>
  <description>The prime_kinova_control package</description>

  <maintainer email="info@iquotient-robotics.com">QuartzYan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>primeii_ros_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>kinova_msgs</build_export_depend>
  <build_export_depend>primeii_ros_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kinova_msgs</exec_depend>
  <exec_depend>primeii_ros_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
